Editor.md彻底添加完毕,以后md文档都可以用这个编辑器编写了

--- a/static/js/lib/editormd/css/editormd.css
+++ b/static/js/lib/editormd/css/editormd.css
@@ -4052,6 +4052,7 @@ li.L9 {
   border: 1px solid #ddd;
   white-space: pre-wrap;
   word-wrap: break-word;
+  display: block;
 }
 .editormd-preview-container ol.linenums, .editormd-html-preview ol.linenums {
   color: #999;
